classroom/join endpoint added
